Fix toolbar overlapping headers

--- a/resources/style/help-center.scss
+++ b/resources/style/help-center.scss
@@ -70,9 +70,9 @@
 }
 
 .doc-page {
-  overflow-y: auto;
+  overflow: hidden;
   height: 100vh;
-  padding: 0 2rem 0.5rem 1.25rem;
+  position: relative;
 
   .btn-group {
     margin: 0;
@@ -86,24 +86,37 @@
 
 .doc-page-toolbar {
   background: var(--background-color);
-  position: sticky;
+  position: absolute;
   top: 0;
-  padding: 0.5rem 0;
+  padding: 0.5rem 2rem 0.5rem 1.25rem;
+  width: 100%;
+  height: 2.25rem;
 }
 
 .doc-page-content {
-  margin: auto;
-  margin-bottom: 1rem;
-  max-width: 600px;
+  padding: 0 2rem 0.5rem 1.25rem;
+  position: absolute;
+  top: 2.25rem;
+  bottom: 0;
+  width: 100%;
+  overflow-y: auto;
+
+  h2 {
+    margin-top: 0;
+  }
+
+  > * {
+    margin: auto;
+    max-width: 85ch;
+  }
 
   img {
-    max-width: 80%;
+    max-width: 60ch;
     border-radius: 0.75rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
 
     &.centered {
-      max-width: 80%;
       margin: 2rem auto;
       display: flex;
     }
